# GowEngineMount

./: .gitignore  README.md
assets/data/json/: Engine_Assets.json  Engine_Config.json  MainEngineState_Config.json  assets_global.json  config.json  config_MainEngineState.json  config_engine.json  renderer_main.json
assets/data/shaders/: lights.fsh  texture.fsh
src/core/: MainEngineController.cpp  MainEngineController.hpp  MainEngineState.cpp  MainEngineState.hpp  MainRenderer.cpp  MainRenderer.hpp
src/platform/android/: .gitignore  build.gradle  settings.gradle
src/platform/android/app/: build.gradle
src/platform/android/app/src/main/: AndroidManifest.xml
src/platform/android/app/src/main/cpp/: CMakeLists.txt  JNIEngine.cpp
src/platform/android/app/src/main/java/com/gowenginemount/android/: Engine.kt  MainActivity.kt
src/platform/android/app/src/main/res/values/: strings.xml  themes.xml
src/platform/android/app/src/main/res/values-night/: themes.xml
src/platform/android/gradle/wrapper/: gradle-wrapper.properties
src/platform/apple/GowEngineMount.xcodeproj/: project.pbxproj
src/platform/apple/GowEngineMount.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/platform/apple/GowEngineMount.xcodeproj/xcshareddata/xcschemes/: GowEngineMount-iOS (debug).xcscheme  GowEngineMount-iOS (release).xcscheme  GowEngineMount-macOS (debug).xcscheme  GowEngineMount-macOS (release).xcscheme
src/platform/apple/iOS/: AppDelegate.swift  GowEngineMount-iOS-Bridging-Header.h  Info.plist  NSEngine.hpp  NSEngine.mm  SceneDelegate.swift  ViewController.swift
src/platform/apple/macOS/: main.mm
src/platform/linux/: .gitignore  GowEngineMount.cbp  README.md  main.cpp  run.sh
src/platform/windows/: .gitignore  GowEngineMount.sln  GowEngineMount.vcxproj  GowEngineMount.vcxproj.filters  main.cpp
